crates/strider/tests/snapshots/v3__ppc64le__memory__array_copy.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "21" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "25" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "26" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "26" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "29" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "30" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "32" -> "30" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "32" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "30" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "33" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "35" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "33" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "39" -> "33" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "43" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "45" -> "43" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "43" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x3e:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "47" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "45" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "47" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" -> "41" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "51" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "53" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "53" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "55" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "55" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "55" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "34" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
