crates/strider/tests/snapshots/v3__ppc64le__memory__array_fill.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v2" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v4" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "3" -> "v2" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "12" -> "9" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "12" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "17" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "18" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "20" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0xffffffffffffffd8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "21" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "17" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "17" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="arg[2] ← r5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "22" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "22" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "21" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "26" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "21" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "28" -> "21" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "29" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "30" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "33" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u64\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "36" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="const 0xffffffffffffffd0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u64\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "37" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "38" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "39" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="const 0x1:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "39" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "39" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "37" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "7" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "42" -> "37" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "43" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "43" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "42" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "46" -> "44" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "47" -> "44" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "47" [label="And:u64", shape=box, fillcolor="#2d2d2d"];
  "48" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xfffffffffffffffc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "48" [label="Or:u64", shape=box, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="ShiftRight:u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x3e:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "52" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "52" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" -> "52" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="ShiftLeft:u64", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x2:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "46" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" -> "46" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "56" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "13" -> "56" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "38" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "59" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "59" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "60" [label="Neg:bool", shape=box, fillcolor="#2d2d2d"];
  "61" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "61" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "62" -> "61" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "65" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "65" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "67" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "69" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "67" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "71" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Equal\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "76" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "77" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "79" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "78" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "80" -> "78" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "80" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "9" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "81" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "82" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "82" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "83" -> "81" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "83" [label="Less\nu64 → bool", shape=box, fillcolor="#2d2d2d"];
  "8" -> "83" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" -> "83" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
